# pokemon-untitled

./: .gitignore  AGENT.md  Cargo.toml  flake.nix  ops.local.example.json
.cargo/: config.toml
.codex/: arbor.skills.json  arbor.skills.lock.json
.codex/skills/domain-core-architect/: SKILL.md  skill.package.json
.codex/skills/knowledge-pattern-maintainer/: SKILL.md  skill.package.json
.codex/skills/ops-first-workflow/: SKILL.md  skill.package.json
.codex/skills/plain-tech-writing-cn/: SKILL.md  skill.package.json
.codex/skills/rust-commenting/: SKILL.md  skill.package.json
.codex/skills/rust-crate-documentation/: SKILL.md  skill.package.json
.codex/skills/rust-crate-structure/: SKILL.md  skill.package.json
assets/catalog/: assets.v1.json  assets.v1.lock.json
crates/adapter/game-data-import/: Cargo.toml
crates/adapter/game-data-import/src/: lib.rs  main.rs
crates/adapter/game-data-import/tests/: cli.rs  diagnostics.rs
crates/adapter/game-fs-assets/: Cargo.toml
crates/adapter/game-fs-assets/src/: lib.rs
crates/adapter/game-native-target/: Cargo.toml
crates/adapter/game-native-target/src/: lib.rs
crates/adapter/punctum-crossterm/: Cargo.toml
crates/adapter/punctum-crossterm/src/: input.rs  lib.rs  runtime.rs
crates/adapter/punctum-crossterm/tests/: platform_contract.rs
crates/adapter/punctum-wgpu/: Cargo.toml
crates/adapter/punctum-wgpu/src/: input.rs  lib.rs  runtime.rs  shader.wgsl
crates/adapter/punctum-wgpu/tests/: input_contract.rs
crates/adapter/punctum-wgpu/tests/unit/: runtime.rs
crates/application/game-session/: Cargo.toml
crates/application/game-session/src/: lib.rs  roster.rs
crates/application/game-session/tests/unit/: lib.rs  roster.rs
crates/application/map-editor-core/: Cargo.toml
crates/application/map-editor-core/src/: controller.rs  editor_protocol.rs  input.rs  layout.rs  lib.rs  model.rs  virtual_command.rs
crates/application/map-editor-core/tests/unit/: controller.rs  input.rs  layout.rs  model.rs  virtual_command.rs
crates/application/trainer-editor-core/: Cargo.toml
crates/application/trainer-editor-core/src/: lib.rs
crates/presentation/game-asset-plan/: Cargo.toml
crates/presentation/game-asset-plan/src/: lib.rs
crates/presentation/game-asset-plan/tests/unit/: lib.rs
crates/presentation/game-assets/: Cargo.toml
crates/presentation/game-assets/src/: lib.rs
crates/presentation/game-assets/tests/unit/: lib.rs
crates/presentation/game-native-plan/: Cargo.toml
crates/presentation/game-native-plan/src/: lib.rs
crates/presentation/game-native-plan/tests/unit/: lib.rs
crates/presentation/game-scene-view/: Cargo.toml
crates/presentation/game-scene-view/src/: lib.rs
crates/presentation/game-scene-view/tests/unit/: lib.rs
crates/presentation/game-ui/: Cargo.toml
crates/presentation/game-ui/src/: console.rs  lib.rs  presentation.rs
crates/presentation/game-ui/tests/unit/: console.rs  lib.rs  presentation.rs
crates/presentation/game-view/: Cargo.toml  README.md
crates/presentation/game-view/docs/: design.md
crates/presentation/game-view/src/: lib.rs  projection.rs
crates/presentation/game-view/tests/unit/: projection.rs
crates/presentation/map-assets/: Cargo.toml
crates/presentation/map-assets/src/: lib.rs
crates/presentation/map-assets/tests/unit/: lib.rs
crates/presentation/map-editor-view/: Cargo.toml  README.md
crates/presentation/map-editor-view/docs/: design.md
crates/presentation/map-editor-view/src/: lib.rs  workbench.rs
crates/presentation/map-editor-view/tests/unit/: workbench.rs
crates/presentation/map-render/: Cargo.toml
crates/presentation/map-render/src/: lib.rs
crates/presentation/map-render/tests/unit/: lib.rs
crates/quality/game-e2e/: Cargo.toml
crates/quality/game-e2e/src/: lib.rs
crates/quality/game-e2e/tests/unit/: lib.rs
crates/runtime/game-host/: Cargo.toml
crates/runtime/game-host/src/: main.rs  map.rs  narrative.rs  sprites.rs  thin_slice.rs  trainer_content.rs
crates/runtime/game-host/tests/unit/: game_host.rs  map.rs  narrative.rs  sprites.rs
crates/runtime/map-editor/: Cargo.toml
crates/runtime/map-editor-cli/: Cargo.toml
crates/runtime/map-editor-cli/src/: lib.rs  main.rs
crates/runtime/map-editor-cli/tests/unit/: lib.rs
crates/runtime/map-editor/src/: assets.rs  main.rs
crates/runtime/map-editor/tests/unit/: assets.rs
crates/runtime/pokemon-editor/: Cargo.toml
crates/runtime/pokemon-editor-cli/: Cargo.toml
crates/runtime/pokemon-editor-cli/src/: main.rs
crates/runtime/pokemon-editor/src/: main.rs
crates/runtime/tile-editor/: Cargo.toml
crates/runtime/tile-editor/src/: main.rs
crates/runtime/trainer-editor/: Cargo.toml  README.md
crates/runtime/trainer-editor-cli/: Cargo.toml
crates/runtime/trainer-editor-cli/src/: main.rs
crates/runtime/trainer-editor/src/: main.rs
docs/: asset-organization-plan.md  battle-system-roadmap.md  ui-framework-upgrade-report-2026-07-19.md  ui-library-vs-qt-analysis-2026-07-19.md
docs/01-arch/: README.md
docs/02-narrative-dsl/: 001-language-and-grammar.md  002-compiler-and-task-runtime.md  003-ramus-world-commit-and-audit.md  004-build-observability-and-boundaries.md  README.md
docs/v2/: CONVENTIONS.md  README.md
fixtures/: battle-rules-v0.1.json  demo-roster-v1.json
maps/: demo-map.g3mp  demo-map.json
maps/verdant-route/: README.md  fern-hollow.json  moss-pass.json  northern-thicket.json  old-east-road.json  quiet-grove.json  southern-field.json  stoneleaf-rise.json  sunlit-clearing.json  wayfarer-crossroads.json  western-meadow.json  world.json
narrative/demo/: forest-collector.narrative  forest-guide.narrative  forest-ranger.narrative  forest-scout.narrative
scripts/: build_pokedex.py  restore_pokemon_outside_hoenn.py  test_pure_coverage.py
scripts/assets/: asset_migration.py  migrate_assets.py  plan_asset_migration.py  split_dppt_overworld_characters.py  verify_catalog.py
scripts/maps/: README.md  generate_verdant_route.py
tools/: __init__.py
tools/pokemon_ops/: __init__.py  __main__.py  cli.py  native_runner.py
(+372 files in other folders)
