[workspace]
members = [
    "crates/domain/battle/battle-domain",
    "crates/domain/data/game-data",
    "crates/domain/map/map-project",
    "crates/domain/map/map-tile-semantics",
    "crates/domain/world/world-project",
    "crates/domain/narrative/narrative-compiler",
    "crates/domain/narrative/narrative-cps",
    "crates/domain/narrative/narrative-token",
    "crates/domain/world/world-domain",
    "crates/foundation/punctum-grid",
    "crates/foundation/punctum-input",
    "crates/foundation/punctum-gpu",
    "crates/foundation/punctum-terminal",
    "crates/foundation/punctum-ui",
    "crates/foundation/ramus",
    "crates/application/battle-application",
    "crates/application/battle-session",
    "crates/application/game-session",
    "crates/application/map-editor-core",
    "crates/application/tile-editor-core",
    "crates/application/world-application",
    "crates/presentation/game-assets",
    "crates/presentation/map-assets",
    "crates/presentation/game-ui",
    "crates/presentation/game-ui-kit",
    "crates/presentation/game-view",
    "crates/presentation/game-scene-view",
    "crates/presentation/game-native-plan",
    "crates/presentation/game-asset-plan",
    "crates/presentation/map-render",
    "crates/presentation/map-editor-view",
    "crates/adapter/battle-ramus-adapter",
    "crates/adapter/game-data-import-core",
    "crates/adapter/game-data-import",
    "crates/adapter/game-fs-assets",
    "crates/adapter/game-native-target",
    "crates/adapter/map-project-storage",
    "crates/adapter/punctum-crossterm",
    "crates/adapter/punctum-wgpu",
    "crates/runtime/game-host",
    "crates/runtime/map-editor",
    "crates/runtime/map-editor-cli",
    "crates/runtime/tile-editor",
    "crates/quality/game-e2e",
    "crates/quality/wslg-wgpu-clear-smoke",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88"

[workspace.dependencies]
battle-application = { path = "crates/application/battle-application" }
battle-domain = { path = "crates/domain/battle/battle-domain" }
battle-session = { path = "crates/application/battle-session" }
world-application = { path = "crates/application/world-application" }
map-editor-core = { path = "crates/application/map-editor-core" }
game-session = { path = "crates/application/game-session" }
game-data = { path = "crates/domain/data/game-data" }
map-project = { path = "crates/domain/map/map-project" }
map-tile-semantics = { path = "crates/domain/map/map-tile-semantics" }
tile-editor-core = { path = "crates/application/tile-editor-core" }
world-project = { path = "crates/domain/world/world-project" }
map-project-storage = { path = "crates/adapter/map-project-storage" }
game-data-import-core = { path = "crates/adapter/game-data-import-core" }
game-fs-assets = { path = "crates/adapter/game-fs-assets" }
game-native-target = { path = "crates/adapter/game-native-target" }
battle-ramus-adapter = { path = "crates/adapter/battle-ramus-adapter" }
map-render = { path = "crates/presentation/map-render" }
map-assets = { path = "crates/presentation/map-assets" }
map-editor-view = { path = "crates/presentation/map-editor-view" }
game-assets = { path = "crates/presentation/game-assets" }
game-ui = { path = "crates/presentation/game-ui" }
game-ui-kit = { path = "crates/presentation/game-ui-kit" }
game-view = { path = "crates/presentation/game-view" }
game-scene-view = { path = "crates/presentation/game-scene-view" }
game-native-plan = { path = "crates/presentation/game-native-plan" }
game-asset-plan = { path = "crates/presentation/game-asset-plan" }
narrative-compiler = { path = "crates/domain/narrative/narrative-compiler" }
narrative-cps = { path = "crates/domain/narrative/narrative-cps" }
narrative-token = { path = "crates/domain/narrative/narrative-token" }
world-domain = { path = "crates/domain/world/world-domain" }
punctum-gpu = { path = "crates/foundation/punctum-gpu" }
punctum-grid = { path = "crates/foundation/punctum-grid" }
punctum-input = { path = "crates/foundation/punctum-input" }
punctum-terminal = { path = "crates/foundation/punctum-terminal" }
punctum-ui = { path = "crates/foundation/punctum-ui" }
punctum-wgpu = { path = "crates/adapter/punctum-wgpu" }
ramus-core = { path = "crates/foundation/ramus" }
