[package]
name = "game-fs-assets"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
game-asset-plan = { path = "../../presentation/game-asset-plan" }
game-assets = { path = "../../presentation/game-assets" }
map-assets = { path = "../../presentation/map-assets" }

[lib]
path = "src/lib.rs"
