[package]
name = "game-native-target"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
game-native-plan = { workspace = true }
glyphon = "0.12.0"
pollster = "0.4.0"
punctum-gpu = { workspace = true }
punctum-wgpu = { workspace = true }
wgpu = "30.0.0"

[lib]
path = "src/lib.rs"
