[package]
name = "punctum-crossterm"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
crossterm = "0.29.0"
punctum-grid = { workspace = true }
punctum-input = { workspace = true }
punctum-terminal = { workspace = true }
unicode-width = "0.2.2"

[lib]
path = "src/lib.rs"
