[package]
name = "punctum-wgpu"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
punctum-gpu = { workspace = true }
punctum-grid = { workspace = true }
punctum-input = { workspace = true }
wgpu = "30.0.0"
winit = "0.30.13"

[lib]
path = "src/lib.rs"
