[package]
name = "game-session"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
battle-application = { workspace = true }
battle-session = { workspace = true }
game-data = { workspace = true }
world-application = { path = "../world-application" }

[lib]
path = "src/lib.rs"
