[package]
name = "map-editor-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
map-project = { workspace = true }
punctum-input = { workspace = true }
punctum-gpu = { workspace = true }
punctum-grid = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }

[lib]
path = "src/lib.rs"
