[package]
name = "map-editor-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
editor-application = { workspace = true }
map-project = { workspace = true }
map-tile-semantics = { workspace = true }
punctum-input = { workspace = true }
punctum-gpu = { workspace = true }
punctum-grid = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[lib]
path = "src/lib.rs"
