[package]
name = "trainer-editor-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
editor-application = { path = "../editor-application" }
game-foundation = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }

[lib]
path = "src/lib.rs"
