[package]
name = "game-asset-plan"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
1{ workspace = true }
1{ workspace = true }
game-data = { workspace = true }
1{ workspace = true }
game-session = { workspace = true }
1{ workspace = true }
1{ workspace = true }
punctum-gpu = { workspace = true }
1{ workspace = true }

[dev-dependencies]
game-data = { workspace = true }
image = "0.25.8"
map-project = { workspace = true }

[lib]
path = "src/lib.rs"
