[package]
name = "game-asset-plan"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
battle-application = { workspace = true }
game-assets = { workspace = true }
game-data = { workspace = true }
game-native-plan = { workspace = true }
game-session = { workspace = true }
game-ui = { workspace = true }
game-view = { workspace = true }
punctum-gpu = { workspace = true }
world-application = { workspace = true }

[dev-dependencies]
game-data = { workspace = true }
image = "0.25.8"
map-project = { workspace = true }

[lib]
path = "src/lib.rs"
