[package]
name = "game-assets"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["png"] }
punctum-gpu = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[lib]
path = "src/lib.rs"
