[package]
name = "game-native-plan"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
game-assets = { workspace = true }
game-view = { workspace = true }
punctum-gpu = { workspace = true }
punctum-grid = { workspace = true }
punctum-ui = { workspace = true }

[lib]
path = "src/lib.rs"
