[package]
name = "game-scene-view"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
game-data = { path = "../../domain/game-data" }
game-session = { workspace = true }
game-ui = { path = "../game-ui" }
game-view = { path = "../game-view" }
map-project = { workspace = true }
map-render = { workspace = true }
punctum-gpu = { workspace = true }
punctum-grid = { workspace = true }
punctum-ui = { workspace = true }
world-application = { path = "../../application/world-application" }

[dev-dependencies]
game-assets = { path = "../game-assets" }

[lib]
path = "src/lib.rs"
