[package]
name = "game-scene-view"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
game-data = { workspace = true }
game-session = { workspace = true }
1{ workspace = true }
1{ workspace = true }
map-project = { workspace = true }
map-render = { workspace = true }
punctum-gpu = { workspace = true }
punctum-grid = { workspace = true }
punctum-ui = { workspace = true }
1{ workspace = true }

[dev-dependencies]
1{ workspace = true }

[lib]
path = "src/lib.rs"
