[package]
name = "game-scene-view"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
game-data = { workspace = true }
game-session = { workspace = true }
game-ui = { workspace = true }
game-view = { workspace = true }
map-project = { workspace = true }
map-render = { workspace = true }
punctum-gpu = { workspace = true }
punctum-grid = { workspace = true }
punctum-ui = { workspace = true }
world-application = { workspace = true }

[dev-dependencies]
game-assets = { workspace = true }

[lib]
path = "src/lib.rs"
