[package]
name = "game-view"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
battle-session = { workspace = true }
game-assets = { path = "../game-assets" }
game-data = { workspace = true }
game-ui = { path = "../game-ui" }
game-ui-kit = { path = "../game-ui-kit" }
punctum-gpu = { workspace = true }
punctum-grid = { workspace = true }
punctum-ui = { workspace = true }
world-application = { path = "../../application/world-application" }

[lib]
path = "src/lib.rs"

[dev-dependencies]
battle-application = { workspace = true }
map-project = { workspace = true }
narrative-cps = { workspace = true }
punctum-input = { workspace = true }
