[package]
name = "game-view"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
battle-session = { workspace = true }
1{ workspace = true }
game-data = { workspace = true }
1{ workspace = true }
1{ workspace = true }
punctum-gpu = { workspace = true }
punctum-grid = { workspace = true }
punctum-ui = { workspace = true }
1{ workspace = true }

[lib]
path = "src/lib.rs"

[dev-dependencies]
battle-application = { workspace = true }
map-project = { workspace = true }
narrative-cps = { workspace = true }
punctum-input = { workspace = true }
