[package]
name = "game-view"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
battle-session = { workspace = true }
game-assets = { workspace = true }
game-data = { workspace = true }
game-foundation = { workspace = true }
game-ui = { workspace = true }
game-ui-kit = { workspace = true }
punctum-gpu = { workspace = true }
punctum-grid = { workspace = true }
punctum-ui = { workspace = true }
world-application = { workspace = true }

[lib]
path = "src/lib.rs"

[dev-dependencies]
battle-application = { workspace = true }
map-project = { workspace = true }
narrative-cps = { workspace = true }
punctum-input = { workspace = true }
