[package]
name = "map-editor-view"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
game-assets = { path = "../game-assets" }
game-view = { path = "../game-view" }
map-editor-core = { path = "../../application/map-editor-core" }
map-project = { workspace = true }
map-render = { workspace = true }
punctum-gpu = { workspace = true }
punctum-grid = { workspace = true }
punctum-ui = { path = "../../foundation/punctum-ui" }

[lib]
path = "src/lib.rs"
