[package]
name = "map-editor-view"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
game-assets = { workspace = true }
game-view = { workspace = true }
map-editor-core = { workspace = true }
map-project = { workspace = true }
map-render = { workspace = true }
punctum-gpu = { workspace = true }
punctum-grid = { workspace = true }
punctum-ui = { workspace = true }

[lib]
path = "src/lib.rs"
