[package]
name = "map-render"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
game-assets = { path = "../game-assets" }
game-view = { path = "../game-view" }
map-project = { workspace = true }
punctum-gpu = { workspace = true }
punctum-grid = { workspace = true }

[lib]
path = "src/lib.rs"
