[package]
name = "game-e2e"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
battle-application = { path = "../../application/battle-application" }
game-data = { workspace = true }
game-session = { workspace = true }
world-application = { path = "../../application/world-application" }

[lib]
path = "src/lib.rs"
