[package]
name = "game-e2e"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
battle-application = { workspace = true }
game-data = { workspace = true }
game-session = { workspace = true }
world-application = { workspace = true }

[lib]
path = "src/lib.rs"
