[package]
name = "game-host"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
battle-application = { path = "../../application/battle-application" }
battle-session = { workspace = true }
game-asset-plan = { path = "../../presentation/game-asset-plan" }
game-assets = { path = "../../presentation/game-assets" }
game-data = { workspace = true }
game-fs-assets = { path = "../../adapter/game-fs-assets" }
game-native-target = { path = "../../adapter/game-native-target" }
game-scene-view = { path = "../../presentation/game-scene-view" }
game-session = { workspace = true }
game-ui = { path = "../../presentation/game-ui" }
game-view = { path = "../../presentation/game-view" }
map-assets = { path = "../../presentation/map-assets" }
map-project = { workspace = true }
map-tile-semantics = { workspace = true }
map-render = { workspace = true }
narrative-compiler = { workspace = true }
narrative-cps = { workspace = true }
narrative-token = { workspace = true }
nucleo-matcher = "0.3.1"
punctum-gpu = { workspace = true }
punctum-grid = { workspace = true }
punctum-input = { workspace = true }
punctum-ui = { workspace = true }
winit = "0.30.13"
world-application = { path = "../../application/world-application" }
world-project = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
