[package]
name = "game-host"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
battle-application = { workspace = true }
battle-session = { workspace = true }
game-asset-plan = { workspace = true }
game-assets = { workspace = true }
game-data = { workspace = true }
game-fs-assets = { workspace = true }
game-foundation = { workspace = true }
game-native-target = { workspace = true }
game-ramus-adapter = { workspace = true }
game-scene-view = { workspace = true }
game-session = { workspace = true }
game-ui = { workspace = true }
game-view = { workspace = true }
map-assets = { workspace = true }
map-project = { workspace = true }
map-tile-semantics = { workspace = true }
map-render = { workspace = true }
narrative-compiler = { workspace = true }
narrative-cps = { workspace = true }
narrative-token = { workspace = true }
nucleo-matcher = "0.3.1"
punctum-gpu = { workspace = true }
punctum-grid = { workspace = true }
punctum-input = { workspace = true }
punctum-ui = { workspace = true }
winit = "0.30.13"
world-application = { workspace = true }
world-project = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
