[package]
name = "map-editor-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
game-fs-assets = { path = "../../adapter/game-fs-assets" }
map-assets = { path = "../../presentation/map-assets" }
map-editor-core = { path = "../../application/map-editor-core" }
map-project = { workspace = true }
map-project-storage = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[[bin]]
name = "map-editor-cli"
path = "src/main.rs"
