[package]
name = "map-editor-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
game-fs-assets = { workspace = true }
map-assets = { workspace = true }
map-editor-core = { workspace = true }
map-project = { workspace = true }
map-tile-semantics = { workspace = true }
map-project-storage = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[[bin]]
name = "map-editor-cli"
path = "src/main.rs"
