[package]
name = "map-editor"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
game-assets = { path = "../../presentation/game-assets" }
game-fs-assets = { path = "../../adapter/game-fs-assets" }
game-native-target = { path = "../../adapter/game-native-target" }
map-assets = { path = "../../presentation/map-assets" }
map-editor-core = { path = "../../application/map-editor-core" }
map-editor-view = { path = "../../presentation/map-editor-view" }
map-project = { workspace = true }
map-render = { workspace = true }
punctum-gpu = { workspace = true }
punctum-ui = { path = "../../foundation/punctum-ui" }
winit = "0.30.13"

[[bin]]
name = "map-editor"
path = "src/main.rs"
