[package]
name = "map-editor"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
1{ workspace = true }
1{ workspace = true }
1{ workspace = true }
1{ workspace = true }
1{ workspace = true }
1{ workspace = true }
map-project = { workspace = true }
map-tile-semantics = { workspace = true }
map-project-storage = { workspace = true }
map-render = { workspace = true }
punctum-gpu = { workspace = true }
1{ workspace = true }
winit = "0.30.13"

[[bin]]
name = "map-editor"
path = "src/main.rs"
