[package]
name = "map-editor"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
game-assets = { workspace = true }
game-fs-assets = { workspace = true }
game-native-target = { workspace = true }
map-assets = { workspace = true }
map-editor-core = { workspace = true }
map-editor-view = { workspace = true }
map-project = { workspace = true }
map-tile-semantics = { workspace = true }
map-project-storage = { workspace = true }
map-render = { workspace = true }
punctum-gpu = { workspace = true }
punctum-ui = { workspace = true }
winit = "0.30.13"

[[bin]]
name = "map-editor"
path = "src/main.rs"
