[package]
name = "pokemon-editor-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
editor-application = { workspace = true }
editor-ramus-adapter = { workspace = true }
editor-resource-adapter = { workspace = true }
pokemon-editor-core = { workspace = true }
serde_json = "1.0.149"

[[bin]]
name = "pokemon-editor-cli"
path = "src/main.rs"
