[package]
name = "tile-editor"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
game-assets = { path = "../../presentation/game-assets" }
game-fs-assets = { path = "../../adapter/game-fs-assets" }
game-native-target = { path = "../../adapter/game-native-target" }
map-assets = { path = "../../presentation/map-assets" }
map-project = { workspace = true }
map-render = { workspace = true }
map-tile-semantics = { workspace = true }
punctum-gpu = { workspace = true }
punctum-ui = { workspace = true }
tile-editor-core = { workspace = true }
winit = "0.30.13"
