[package]
name = "tile-editor"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
game-assets = { workspace = true }
game-fs-assets = { workspace = true }
game-native-target = { workspace = true }
map-assets = { workspace = true }
map-project = { workspace = true }
map-render = { workspace = true }
map-tile-semantics = { workspace = true }
punctum-gpu = { workspace = true }
punctum-ui = { workspace = true }
tile-editor-core = { workspace = true }
winit = "0.30.13"
