[package]
name = "trainer-editor-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
editor-application = { workspace = true }
editor-ramus-adapter = { workspace = true }
editor-resource-adapter = { workspace = true }
game-foundation = { workspace = true }
serde_json = "1.0.149"
trainer-editor-core = { workspace = true }

[[bin]]
name = "trainer-editor-cli"
path = "src/main.rs"
